<resources>
    <string name="app_name">Cartrout - Merchant App</string>
    <string name="title_activity_splasscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">User Name / Email </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit">Submit</string>
    <string name="History">History</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E Drop - Staff</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_Logout">Logout</string>


    <string name="permission_required">Permission required</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="upload">Upload</string>

    <string name="title_activity_navigation">Navigation</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="dashboard">DASHBOARD</string>
    <string name="order_history">ORDER HISTORY</string>

    <string name="menu_management">MENU MANAGEMENT</string>
    <string name="order_management">ORDER MANAGEMENT</string>
    <string name="category_management">CATEGORY MANAGEMENT</string>
    <string name="general_settings">GENERAL SETTINGS</string>
    <string name="help">HELP</string>
    <string name="reviews">REVIEWS</string>
    <string name="notification">NOTIFICATION</string>
    <string name="logout">LOGOUT</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="from">From</string>
    <string name="to">To</string>
    <string name="user_name">User Name</string>

    <string name="error_data">Something went wrong! Please try again later.</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="message_no_data">There are currently no items here.</string>
    <string name="titlt">Enter Title Here</string>
    <string name="description">Enter Description Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="todo" />
    <string name="s">+</string>
    <string name="default_notification_channel_id">edropvendor</string>
    <string name="no_internet">No internet found. Check your connection</string>
    <string name="delivery_partner_app">DELIVERY PARTNER APP</string>
    <string name="empty_orders">No Order Received </string>
    <string name="help_desk_no">https://wa.me/message/DZME2F7HQ77FO1</string>
    <string name="helpdesk_mail_id">info@cartroot.com</string>
    <string name="empty_items_list">Empty Items List</string>
</resources>