<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/logobw">

            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingRight="16dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/crd_recent_orders"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    app:cardElevation="3dp"
                    android:elevation="3dp"
                    app:cardCornerRadius="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:orientation="vertical">



                        <TextView
                            android:id="@+id/login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:gravity="top"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:text="Merchant APP"
                            android:gravity="center"
                            android:textSize="17dp"
                            android:padding="5dp"
                            android:textColor="@color/darkGrey"
                            android:layout_height="match_parent">

                        </TextView>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputUsername"
                                android:layout_width="match_parent"
                                style="@style/HelperTextAppearance"


                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableEnd="@drawable/login_user_new"
                                    android:drawableRight="@drawable/login_user_new"
                                    android:hint="@string/prompt_email"
                                    android:singleLine="true" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout

                                android:layout_width="match_parent"
                                style="@style/HelperTextAppearance"

                                app:passwordToggleEnabled="true"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/et_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:drawableRight="@drawable/pass_show"
                                    android:drawableEnd="@drawable/pass_hide"
                                    android:drawablePadding="10dp"
                                    android:inputType="textPassword"
                                    android:hint="@string/prompt_password"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>


                        <TextView
                            android:id="@+id/fp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="15dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                           android:visibility="gone"
                            android:textColor="@color/darkGrey"
                            android:text="forgot password ?">

                        </TextView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardElevation="3dp"
                            android:layout_gravity="center"
                            android:elevation="3dp"
                            app:cardCornerRadius="25dp">

                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="#F7941E"
                                android:layout_marginTop="5dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                tools:layout_editor_absoluteX="0dp">
                                <Button
                                    android:id="@+id/ll_login"
                                    android:layout_width="match_parent"
                                    android:text="@string/login"
                                    android:textSize="18dp"
                                    android:visibility="visible"
                                    android:layout_marginRight="40dp"
                                    android:layout_marginLeft="40dp"
                                    android:background="@color/tr"
                                    android:textColor="@color/white"
                                    android:layout_height="match_parent">

                                </Button>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="13dp"
                    android:layout_marginBottom="20dp"

                    android:textColor="@color/darkGrey"
                    android:text="Are you a new Merchant ? Want to register?">

                </TextView>
                <androidx.cardview.widget.CardView
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="3dp"
                    android:layout_margin="5dp"

                    android:elevation="3dp"
                    app:cardCornerRadius="20dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:background="#FFFFFF"

                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:layout_editor_absoluteX="0dp">
                        <Button
                            android:id="@+id/bt_enquire"
                            android:layout_width="wrap_content"
                            android:text="Enquire Now"
                            android:textSize="15dp"
                            android:layout_marginRight="@dimen/textsize_10"
                            android:layout_marginLeft="@dimen/textsize_10"
                            android:visibility="visible"
                            android:inputType="number"
                            android:background="@color/tr"
                            android:textColor="@color/darkGrey"
                            android:layout_height="match_parent">

                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </ScrollView>



    <!-- TODO: Update blank fragment layout -->

</RelativeLayout>